# twikit-mcp

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-05-11-twikit-mcp-design.md  2026-05-11-twikit-mcp.md
src/tweety_mcp/: __init__.py  auth.py  client_factory.py  config.py  errors.py  logging_utils.py  media_fetcher.py  models.py  query.py  server.py  service.py
src/twikit_mcp/: __init__.py  _tweety_patch.py  cache.py  client_factory.py  config.py  errors.py  models.py  normalize.py  query.py  server.py  service.py
tests/: conftest.py  test_cache.py  test_client_factory.py  test_config.py  test_error_mapping.py  test_logging.py  test_media_fetcher.py  test_models.py  test_normalize.py  test_query.py  test_service_mapping.py  test_smoke_import.py  test_x_get_article.py  test_x_get_bookmarks.py  test_x_get_comments.py  test_x_get_post.py  test_x_search_posts.py
