[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "twikit-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.0,<3.0.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
