[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "twikit-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.4,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "twikit>=2.3.3,<3.0.0",
]

[project.scripts]
twikit-mcp = "twikit_mcp.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
